@@ -1,261 +1,0 @@
-#include "hash.h"
-#include <stdio.h>
-#include "html.h"
-static HashItem_si MyHashItem[] = {
-  /* 0 */ {"/form_int",HTML_N_FORM_INT,&MyHashItem[1]},
-  /* 1 */ {"/kbd",HTML_NOP,&MyHashItem[2]},
-  /* 2 */ {"dd",HTML_DD,&MyHashItem[3]},
-  /* 3 */ {"/dir",HTML_N_UL,NULL},
-  /* 4 */ {"/body",HTML_N_BODY,NULL},
-  /* 5 */ {"base",HTML_BASE,NULL},
-  /* 6 */ {"/div",HTML_N_DIV,NULL},
-  /* 7 */ {"tbody",HTML_TBODY,&MyHashItem[8]},
-  /* 8 */ {"meta",HTML_META,&MyHashItem[9]},
-  /* 9 */ {"i",HTML_NOP,NULL},
-  /* 10 */ {"/p",HTML_N_P,NULL},
-  /* 11 */ {"input_alt",HTML_INPUT_ALT,&MyHashItem[12]},
-  /* 12 */ {"dl",HTML_DL,NULL},
-  /* 13 */ {"/tbody",HTML_N_TBODY,&MyHashItem[14]},
-  /* 14 */ {"/s",HTML_N_DEL,NULL},
-  /* 15 */ {"del",HTML_DEL,&MyHashItem[16]},
-  /* 16 */ {"xmp",HTML_XMP,&MyHashItem[17]},
-  /* 17 */ {"br",HTML_BR,NULL},
-  /* 18 */ {"/u",HTML_N_U,&MyHashItem[19]},
-  /* 19 */ {"em",HTML_EM,NULL},
-  /* 20 */ {"title_alt",HTML_TITLE_ALT,&MyHashItem[21]},
-  /* 21 */ {"caption",HTML_CAPTION,&MyHashItem[22]},
-  /* 22 */ {"plaintext",HTML_PLAINTEXT,&MyHashItem[23]},
-  /* 23 */ {"p",HTML_P,NULL},
-  /* 24 */ {"blockquote",HTML_BLQ,&MyHashItem[25]},
-  /* 25 */ {"menu",HTML_UL,NULL},
-  /* 26 */ {"/colgroup",HTML_N_COLGROUP,&MyHashItem[27]},
-  /* 27 */ {"dfn",HTML_NOP,NULL},
-  /* 28 */ {"s",HTML_DEL,&MyHashItem[29]},
-  /* 29 */ {"strong",HTML_EM,NULL},
-  /* 30 */ {"dt",HTML_DT,NULL},
-  /* 31 */ {"_rule",HTML_RULE,&MyHashItem[32]},
-  /* 32 */ {"u",HTML_U,NULL},
-  /* 33 */ {"/map",HTML_N_MAP,&MyHashItem[34]},
-  /* 34 */ {"/frameset",HTML_N_FRAMESET,&MyHashItem[35]},
-  /* 35 */ {"/ol",HTML_N_OL,NULL},
-  /* 36 */ {"/td",HTML_N_TD,NULL},
-  /* 37 */ {"/_rule",HTML_N_RULE,&MyHashItem[38]},
-  /* 38 */ {"li",HTML_LI,NULL},
-  /* 39 */ {"html",HTML_BODY,&MyHashItem[40]},
-  /* 40 */ {"hr",HTML_HR,NULL},
-  /* 41 */ {"/strong",HTML_N_EM,NULL},
-  /* 42 */ {"/th",HTML_N_TH,&MyHashItem[43]},
-  /* 43 */ {"option",HTML_OPTION,&MyHashItem[44]},
-  /* 44 */ {"kbd",HTML_NOP,&MyHashItem[45]},
-  /* 45 */ {"dir",HTML_UL,NULL},
-  /* 46 */ {"col",HTML_COL,NULL},
-  /* 47 */ {"/caption",HTML_N_CAPTION,&MyHashItem[48]},
-  /* 48 */ {"div",HTML_DIV,NULL},
-  /* 49 */ {"head",HTML_HEAD,&MyHashItem[50]},
-  /* 50 */ {"ol",HTML_OL,&MyHashItem[51]},
-  /* 51 */ {"/ul",HTML_N_UL,NULL},
-  /* 52 */ {"/ins",HTML_N_INS,&MyHashItem[53]},
-  /* 53 */ {"area",HTML_AREA,NULL},
-  /* 54 */ {"td",HTML_TD,&MyHashItem[55]},
-  /* 55 */ {"/option",HTML_N_OPTION,NULL},
-  /* 56 */ {"eol",HTML_EOL,&MyHashItem[57]},
-  /* 57 */ {"/tr",HTML_N_TR,&MyHashItem[58]},
-  /* 58 */ {"nobr",HTML_NOBR,NULL},
-  /* 59 */ {"img_alt",HTML_IMG_ALT,&MyHashItem[60]},
-  /* 60 */ {"table_alt",HTML_TABLE_ALT,&MyHashItem[61]},
-  /* 61 */ {"th",HTML_TH,&MyHashItem[62]},
-  /* 62 */ {"script",HTML_SCRIPT,&MyHashItem[63]},
-  /* 63 */ {"/tt",HTML_NOP,NULL},
-  /* 64 */ {"code",HTML_NOP,NULL},
-  /* 65 */ {"samp",HTML_NOP,NULL},
-  /* 66 */ {"textarea",HTML_TEXTAREA,NULL},
-  /* 67 */ {"table",HTML_TABLE,&MyHashItem[68]},
-  /* 68 */ {"img",HTML_IMG,&MyHashItem[69]},
-  /* 69 */ {"/blockquote",HTML_N_BLQ,NULL},
-  /* 70 */ {"applet",HTML_APPLET,&MyHashItem[71]},
-  /* 71 */ {"map",HTML_MAP,&MyHashItem[72]},
-  /* 72 */ {"ul",HTML_UL,NULL},
-  /* 73 */ {"/script",HTML_N_SCRIPT,&MyHashItem[74]},
-  /* 74 */ {"center",HTML_CENTER,NULL},
-  /* 75 */ {"/table",HTML_N_TABLE,&MyHashItem[76]},
-  /* 76 */ {"cite",HTML_NOP,&MyHashItem[77]},
-  /* 77 */ {"/h1",HTML_N_H,NULL},
-  /* 78 */ {"tr",HTML_TR,&MyHashItem[79]},
-  /* 79 */ {"/h2",HTML_N_H,NULL},
-  /* 80 */ {"/h3",HTML_N_H,NULL},
-  /* 81 */ {"pre_int",HTML_PRE_INT,&MyHashItem[82]},
-  /* 82 */ {"/font",HTML_N_FONT,&MyHashItem[83]},
-  /* 83 */ {"tt",HTML_NOP,&MyHashItem[84]},
-  /* 84 */ {"/h4",HTML_N_H,NULL},
-  /* 85 */ {"body",HTML_BODY,&MyHashItem[86]},
-  /* 86 */ {"/form",HTML_N_FORM,&MyHashItem[87]},
-  /* 87 */ {"/h5",HTML_N_H,NULL},
-  /* 88 */ {"/h6",HTML_N_H,NULL},
-  /* 89 */ {"frame",HTML_FRAME,NULL},
-  /* 90 */ {"/img_alt",HTML_N_IMG_ALT,&MyHashItem[91]},
-  /* 91 */ {"/center",HTML_N_CENTER,NULL},
-  /* 92 */ {"/pre",HTML_N_PRE,NULL},
-  /* 93 */ {"tfoot",HTML_TFOOT,NULL},
-  /* 94 */ {"ins",HTML_INS,NULL},
-  /* 95 */ {"/var",HTML_NOP,NULL},
-  /* 96 */ {"h1",HTML_H,NULL},
-  /* 97 */ {"/tfoot",HTML_N_TFOOT,&MyHashItem[98]},
-  /* 98 */ {"input",HTML_INPUT,&MyHashItem[99]},
-  /* 99 */ {"h2",HTML_H,NULL},
-  /* 100 */ {"h3",HTML_H,NULL},
-  /* 101 */ {"h4",HTML_H,NULL},
-  /* 102 */ {"h5",HTML_H,NULL},
-  /* 103 */ {"h6",HTML_H,NULL},
-  /* 104 */ {"/pre_int",HTML_N_PRE_INT,NULL},
-  /* 105 */ {"/menu",HTML_N_UL,NULL},
-  /* 106 */ {"form_int",HTML_FORM_INT,NULL},
-  /* 107 */ {"style",HTML_STYLE,&MyHashItem[108]},
-  /* 108 */ {"address",HTML_BR,NULL},
-  /* 109 */ {"/textarea",HTML_N_TEXTAREA,NULL},
-  /* 110 */ {"/input_alt",HTML_N_INPUT_ALT,NULL},
-  /* 111 */ {"doctype",HTML_DOCTYPE,&MyHashItem[112]},
-  /* 112 */ {"/style",HTML_N_STYLE,NULL},
-  /* 113 */ {"/html",HTML_N_BODY,NULL},
-  /* 114 */ {"pre",HTML_PRE,&MyHashItem[115]},
-  /* 115 */ {"title",HTML_TITLE,NULL},
-  /* 116 */ {"select",HTML_SELECT,NULL},
-  /* 117 */ {"var",HTML_NOP,NULL},
-  /* 118 */ {"/title",HTML_N_TITLE,NULL},
-  /* 119 */ {"embed",HTML_EMBED,&MyHashItem[120]},
-  /* 120 */ {"colgroup",HTML_COLGROUP,&MyHashItem[121]},
-  /* 121 */ {"/head",HTML_N_HEAD,&MyHashItem[122]},
-  /* 122 */ {"isindex",HTML_ISINDEX,NULL},
-  /* 123 */ {"strike",HTML_DEL,&MyHashItem[124]},
-  /* 124 */ {"listing",HTML_LISTING,NULL},
-  /* 125 */ {"bgsound",HTML_BGSOUND,NULL},
-  /* 126 */ {"/address",HTML_BR,NULL},
-  /* 127 */ {"thead",HTML_THEAD,&MyHashItem[128]},
-  /* 128 */ {"wbr",HTML_WBR,&MyHashItem[129]},
-  /* 129 */ {"/del",HTML_N_DEL,&MyHashItem[130]},
-  /* 130 */ {"/nobr",HTML_N_NOBR,&MyHashItem[131]},
-  /* 131 */ {"/select",HTML_N_SELECT,&MyHashItem[132]},
-  /* 132 */ {"frameset",HTML_FRAMESET,&MyHashItem[133]},
-  /* 133 */ {"/xmp",HTML_N_XMP,NULL},
-  /* 134 */ {"/code",HTML_NOP,NULL},
-  /* 135 */ {"/thead",HTML_N_THEAD,&MyHashItem[136]},
-  /* 136 */ {"/samp",HTML_NOP,&MyHashItem[137]},
-  /* 137 */ {"/dfn",HTML_NOP,&MyHashItem[138]},
-  /* 138 */ {"_id",HTML_NOP,NULL},
-  /* 139 */ {"/strike",HTML_N_DEL,&MyHashItem[140]},
-  /* 140 */ {"/a",HTML_N_A,NULL},
-  /* 141 */ {"/b",HTML_N_B,NULL},
-  /* 142 */ {"font",HTML_FONT,&MyHashItem[143]},
-  /* 143 */ {"/dl",HTML_N_DL,NULL},
-  /* 144 */ {"form",HTML_FORM,&MyHashItem[145]},
-  /* 145 */ {"/cite",HTML_NOP,&MyHashItem[146]},
-  /* 146 */ {"a",HTML_A,NULL},
-  /* 147 */ {"b",HTML_B,NULL},
-  /* 148 */ {"/listing",HTML_N_LISTING,&MyHashItem[149]},
-  /* 149 */ {"/em",HTML_N_EM,&MyHashItem[150]},
-  /* 150 */ {"/i",HTML_NOP,NULL},
-};
-
-static HashItem_si *MyHashItemTbl[] = {
-  &MyHashItem[0],
-  &MyHashItem[4],
-  NULL,
-  &MyHashItem[5],
-  &MyHashItem[6],
-  &MyHashItem[7],
-  &MyHashItem[10],
-  NULL,
-  &MyHashItem[11],
-  &MyHashItem[13],
-  &MyHashItem[15],
-  &MyHashItem[18],
-  &MyHashItem[20],
-  &MyHashItem[24],
-  &MyHashItem[26],
-  &MyHashItem[28],
-  &MyHashItem[30],
-  &MyHashItem[31],
-  &MyHashItem[33],
-  NULL,
-  &MyHashItem[36],
-  &MyHashItem[37],
-  &MyHashItem[39],
-  &MyHashItem[41],
-  &MyHashItem[42],
-  NULL,
-  &MyHashItem[46],
-  NULL,
-  &MyHashItem[47],
-  NULL,
-  &MyHashItem[49],
-  &MyHashItem[52],
-  &MyHashItem[54],
-  NULL,
-  &MyHashItem[56],
-  NULL,
-  &MyHashItem[59],
-  &MyHashItem[64],
-  &MyHashItem[65],
-  &MyHashItem[66],
-  NULL,
-  &MyHashItem[67],
-  &MyHashItem[70],
-  NULL,
-  &MyHashItem[73],
-  &MyHashItem[75],
-  &MyHashItem[78],
-  &MyHashItem[80],
-  &MyHashItem[81],
-  &MyHashItem[85],
-  &MyHashItem[88],
-  &MyHashItem[89],
-  &MyHashItem[90],
-  &MyHashItem[92],
-  &MyHashItem[93],
-  &MyHashItem[94],
-  &MyHashItem[95],
-  &MyHashItem[96],
-  &MyHashItem[97],
-  &MyHashItem[100],
-  &MyHashItem[101],
-  &MyHashItem[102],
-  &MyHashItem[103],
-  NULL,
-  &MyHashItem[104],
-  &MyHashItem[105],
-  NULL,
-  NULL,
-  &MyHashItem[106],
-  &MyHashItem[107],
-  NULL,
-  &MyHashItem[109],
-  &MyHashItem[110],
-  &MyHashItem[111],
-  &MyHashItem[113],
-  NULL,
-  NULL,
-  &MyHashItem[114],
-  &MyHashItem[116],
-  NULL,
-  &MyHashItem[117],
-  &MyHashItem[118],
-  &MyHashItem[119],
-  &MyHashItem[123],
-  &MyHashItem[125],
-  &MyHashItem[126],
-  &MyHashItem[127],
-  NULL,
-  NULL,
-  &MyHashItem[134],
-  &MyHashItem[135],
-  &MyHashItem[139],
-  &MyHashItem[141],
-  NULL,
-  NULL,
-  NULL,
-  &MyHashItem[142],
-  &MyHashItem[144],
-  &MyHashItem[147],
-  &MyHashItem[148],
-};
-
-Hash_si tagtable = {100, MyHashItemTbl};
